[workspace]
members = ["replicant", "replicant-core", "replicant-client", "replicant-server"]
resolver = "2"

[profile.release]
lto = true
strip = true
codegen-units = 1

[workspace.dependencies]
tokio = { version = "1.45", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["serde", "v4", "v5"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
tracing = "0.1"
