[package]
name = "replicant-client"
version = "0.1.2"
edition = "2021"

[dependencies]
replicant-core = { path = "../replicant-core" }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "json", "uuid", "chrono", "tls-rustls"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures-util = "0.3"
backon = "1.2"
json-patch = "1.2"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"
colored = "2.1"
ratatui = "0.26"
crossterm = "0.27"

[build-dependencies]
cbindgen = "0.26"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
