[package]
name = "replicant-core"
version = "0.2.0"
edition = "2021"

[features]
default = []
server = ["sqlx/postgres", "axum", "argon2"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
json-patch = "1.2"
sha2 = "0.10"
strum = { version = "0.26", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "json", "uuid", "chrono", "migrate"] }
argon2 = { version = "0.5", optional = true }
axum = { version = "0.7", features = ["ws"], optional = true }
tracing = { workspace = true }
tokio = { workspace = true }
