[package]
name = "replicant-server"
version = "0.1.2"
edition = "2021"

[lib]
name = "replicant_server"
path = "src/lib.rs"

[[bin]]
name = "replicant-server"
path = "src/main.rs"

[dependencies]
replicant-core = { path = "../replicant-core", features = ["server"] }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
axum = { version = "0.7", features = ["ws"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "uuid", "chrono", "migrate", "tls-rustls"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
dashmap = "5.5"
argon2 = "0.5"
rand = "0.8"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
subtle = "2.5"
futures-util = "0.3"
json-patch = "1.2"
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"

[dev-dependencies]
anyhow = "1.0"
indicatif = "0.17"
replicant-client = { path = "../replicant-client" }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tungstenite = "0.24"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
libc = "1.0.0-alpha.1"
portpicker = "0.1"
