[package]
name = "replicant"
version = "0.2.0"
edition = "2021"
description = "Offline-first document synchronization library"

[dependencies]
replicant-core = { path = "../replicant-core" }
replicant-client = { path = "../replicant-client" }
# Server is now Elixir/Phoenix - see replicant-server/ in repo root
